# buckel

./: .gitignore  deno.json  justfile
config/database/: init.sql
docker/: compose.yml
services/backend/rag/: justfile  pylintrc  pyproject.toml
services/backend/rag/rag/: main.py
services/backend/rag/rag/api/v1/: __init__.py
services/backend/rag/rag/core/: archive.py  chroma.py  config.py  db.py  exceptions.py  file.py  log.py  markdown_parser.py
services/backend/rag/rag/schemas/: files.py  md.py
services/backend/rag/tests/: test.md
services/backend/task_router/: deno.json  justfile  main.ts  tools.yaml
services/backend/task_router/scripts/: create_tables.ts
services/backend/task_router/src/: config.ts  template.ts  types.ts
services/backend/task_router/src/db/: types.ts
services/backend/task_router/src/llm/: ollama.ts  system_prompt_parsing.txt
services/backend/task_router/src/schemes/: json.ts  tools.ts
services/backend/task_router/src/tools/: loadTool.ts
services/backend/task_router/templates/: parsing_default_en.eta  routing_default_en.eta
services/backend/task_runner/src/: logger.ts
services/backend/task_runner/src/db/: pg.ts
services/backend/task_runner/src/llm/: general.ts  ollama.ts  perplexity.ts  system_prompt_routing.txt
services/backend/task_runner/src/schemes/: config.ts  db.ts
services/frontend/demix/: .gitignore  eslint.config.js  justfile  package.json  pnpm-lock.yaml  tsconfig.json
services/frontend/demix/app/: app.css  root.tsx  routes.ts  types.tsx
services/frontend/demix/app/components/: headings.tsx  link.tsx  (+2 more)
(+30 files in other folders)
